--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   /* Dégradé + image de fond combinés correctement */
   background: 
     linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-    url("https://lbcdn.airpaz.com/hotelimages/6155278/hotel-dali-val-deurope-204d1690a55bda5dbea35b622bd8ddba.jpg") no-repeat center center;
+    url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUAHL0gWshtvJUTlaF28dp9c-fl_AhDI19Og&s") no-repeat center center;
   background-size: cover; /* pour que l'image couvre tout l'écran */
   min-height: 100vh;
   display: flex;
@@ -101,6 +101,7 @@
 
 </body>
 </html>
+
 
 
 
