--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
     <p>Prenez 30 secondes pour partager votre expérience</p>
 
     <a href="https://www.google.com/travel/search?q=hotel%20dali%20val%20d%27europe&g2lb=4965990%2C72471280%2C72560029%2C72573224%2C72647020%2C72686036%2C72803964%2C72882230%2C72958624%2C73059275%2C73064764%2C73249147%2C121509482&hl=fr-GB&gl=uk&ssta=1&ts=CAEaRwopEicyJTB4NDdlNjFkMTQwMzE5MTJiMToweGU1ZDQxZjQwZjczZjc5MjMSGhIUCgcI6g8QARgeEgcI6g8QARgfGAEyAhAA&qs=CAEyFENnc0lvX0w5dVlfb2gtcmxBUkFCOAJCCQkjeT_3QB_U5UIJCSN5P_dAH9Tl&ap=ugEHcmV2aWV3cw&ictx=111&ved=0CAAQ5JsGahcKEwiAh8Gm_a2SAxUAAAAAHQAAAAAQBA" class="btn good" target="_blank">
-      ⭐ J’ai apprécié
+      Tout s’est bien passé 😊
     </a>
 
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSdqxnI54jr3z141NnuWReD2l1o9qWMZs7GBKhagpDhMRJ30Hg/viewform?usp=header" class="btn bad" target="_blank">
-      💬 Je n’ai pas apprécié
+      Il y a des choses à améliorer 🔧
     </a>
 
     <div class="thanks">Merci pour votre retour ✨</div>
@@ -101,6 +101,7 @@
 
 </body>
 </html>
+
 
 
 
