--- a/index.html
+++ b/index.html
@@ -4,28 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Votre avis compte</title>
-
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-  font-family: "Georgia", serif;
-  /* Dégradé + image de fond combinés correctement */
-  background: 
-    linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-    url("https://lbcdn.airpaz.com/hotelimages/6155278/hotel-dali-val-deurope-204d1690a55bda5dbea35b622bd8ddba.jpg") no-repeat center center;
-  background-size: cover; /* pour que l'image couvre tout l'écran */
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
+      font-family: "Georgia", serif;
+      background:
+        linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
+        url("https://lbcdn.airpaz.com/hotelimages/6155278/hotel-dali-val-deurope-204d1690a55bda5dbea35b622bd8ddba.jpg") no-repeat center center;
+      background-size: cover;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+    }
     .card {
       background: #f6f2ea;
       max-width: 420px;
@@ -35,20 +27,17 @@
       text-align: center;
       box-shadow: 0 20px 50px rgba(0,0,0,0.35);
     }
-
     h1 {
       font-size: 32px;
       color: #8c7a5a;
       margin-bottom: 12px;
       font-weight: 400;
     }
-
     p {
       font-size: 17px;
       color: #5f5f5f;
       margin-bottom: 28px;
     }
-
     .btn {
       display: block;
       width: 100%;
@@ -59,21 +48,9 @@
       margin-bottom: 16px;
       transition: transform 0.15s ease;
     }
-
-    .btn:hover {
-      transform: scale(1.02);
-    }
-
-    .good {
-      background: #c9a14a;
-      color: #ffffff;
-    }
-
-    .bad {
-      background: #8c7a5a;
-      color: #ffffff;
-    }
-
+    .btn:hover { transform: scale(1.02); }
+    .good { background: #c9a14a; color: #fff; }
+    .bad { background: #8c7a5a; color: #fff; }
     .thanks {
       font-size: 13px;
       color: #8a8a8a;
@@ -83,24 +60,53 @@
 </head>
 
 <body>
-
   <div class="card">
-    <h1>Votre avis compte</h1>
-    <p>Prenez 30 secondes pour partager votre expérience</p>
+    <h1 id="title"></h1>
+    <p id="subtitle"></p>
 
-    <a href="https://www.google.com/travel/search?q=hotel%20dali%20val%20d%27europe&g2lb=4965990%2C72471280%2C72560029%2C72573224%2C72647020%2C72686036%2C72803964%2C72882230%2C72958624%2C73059275%2C73064764%2C73249147%2C121509482&hl=fr-GB&gl=uk&ssta=1&ts=CAEaRwopEicyJTB4NDdlNjFkMTQwMzE5MTJiMToweGU1ZDQxZjQwZjczZjc5MjMSGhIUCgcI6g8QARgeEgcI6g8QARgfGAEyAhAA&qs=CAEyFENnc0lvX0w5dVlfb2gtcmxBUkFCOAJCCQkjeT_3QB_U5UIJCSN5P_dAH9Tl&ap=ugEHcmV2aWV3cw&ictx=111&ved=0CAAQ5JsGahcKEwiAh8Gm_a2SAxUAAAAAHQAAAAAQBA" class="btn good" target="_blank">
-      Tout s’est bien passé 😊
-    </a>
+    <a id="goodBtn"
+       href="https://www.google.com/travel/search?q=hotel%20dali%20val%20d%27europe"
+       class="btn good"
+       target="_blank"></a>
 
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdqxnI54jr3z141NnuWReD2l1o9qWMZs7GBKhagpDhMRJ30Hg/viewform?usp=header" class="btn bad" target="_blank">
-      Il y a des choses à améliorer 🔧
-    </a>
+    <a id="badBtn"
+       href="https://docs.google.com/forms/d/e/1FAIpQLSdqxnI54jr3z141NnuWReD2l1o9qWMZs7GBKhagpDhMRJ30Hg/viewform"
+       class="btn bad"
+       target="_blank"></a>
 
-    <div class="thanks">Merci pour votre retour ✨</div>
+    <div class="thanks" id="thanks"></div>
   </div>
 
+  <script>
+    const lang = navigator.language.startsWith('fr') ? 'fr' : 'en';
+
+    const texts = {
+      fr: {
+        title: "Votre avis compte",
+        subtitle: "Prenez 30 secondes pour partager votre expérience",
+        good: "Tout s’est bien passé 😊",
+        bad: "Il y a des choses à améliorer 🔧",
+        thanks: "Merci pour votre retour ✨"
+      },
+      en: {
+        title: "Your feedback matters",
+        subtitle: "Take 30 seconds to share your experience",
+        good: "Everything went well 😊",
+        bad: "There are things to improve 🔧",
+        thanks: "Thank you for your feedback ✨"
+      }
+    };
+
+    document.getElementById("title").textContent = texts[lang].title;
+    document.getElementById("subtitle").textContent = texts[lang].subtitle;
+    document.getElementById("goodBtn").textContent = texts[lang].good;
+    document.getElementById("badBtn").textContent = texts[lang].bad;
+    document.getElementById("thanks").textContent = texts[lang].thanks;
+  </script>
 </body>
 </html>
+
+
 
 
 
